@@ -1,3 +1,13 @@
+Fri Feb 15 15:29:08 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>
+
+ * Integrated Power Management (HAL integration):
+   - fix the reporting of the battery technology,
+   - fix the reporting of levels by adding a warning and a critical level,
+   - report battery granularity,
+   - only report the charging status if the battery charge is below 100 %,
+   - report the current battery computed state (capacity_state),
+   - report battery.alarm.{design,unit}
+
 Thu Feb 14 08:47:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>
 
  - man/megatec_usb.8, man/upscode2.8, man/bcmxcp.8, man/bcmxcp_usb.8,
